--- a/ex/閱讀作業.md
+++ b/ex/閱讀作業.md
@@ -64,107 +64,120 @@ cmath.sqrt(-1)
 
 3.print("abc""+""def")會印出甚麼結果:
 (A)出現錯誤,無法印出   (B)abc+def  (C)abc""+""def  (D)abcdef
-
+答:(B)
 4.print("abc"+"def")會印出甚麼結果:
 (A)出現錯誤,無法印出   (B)abc+def  (C)abc""+""def  (D)abcdef
-
+答:(D)
 5.底下程式執行後結果為何?
 word = "arttarataaa"
 print(word.replace("a", "z",3))
 (A)出現錯誤,無法印出   (B)arttarataaa  (C)zrttzrztaaa (D)zrttzrztzzz
-
+答:(C)
 6.底下程式執行後結果為何?
 word = "arttarataaa"
 print(word.replace("a", "z"))
 (A)出現錯誤,無法印出   (B)arttarataaa  (C)zrttzrztaaa (D)zrttzrztzzz
-
+答:(D)
 7.底下各行輸出為何?
 sentence = 'To Be or NOT to Be: that is the question: '
-print(sentence.upper())
-print(sentence.lower())
-print(sentence.capitalize())
-print(sentence.count('o'))
+print(sentence.upper())全大寫
+print(sentence.lower())全小寫
+print(sentence.capitalize())第一個字母大寫
+print(sentence.count('o'))這段文字中有幾個O
 ```
 
 ```
 底下各行輸出為何?
 x = "Hello"
-x[0]
-x[5]
-x[-1]
-x[1:]
-x[1:-1]
+x[0] 答:(H)
+x[5]答:(錯誤，沒有第五個)
+x[-1]答:(o)
+x[1:]答:(ello)
+x[1:-1]答:(ell)
 ```
 ```
 底下輸出為何?
 x = "Goodbye\n"
 x = x[:-1]
 x
+答:('Goodbye')
 ```
 ```
 len("Goodbye")
+答:(7)
 ```
 ### 基本的字串操作
 ```
 x = "Hello " + "Mydeargreatteacher"
 x
+答:('Hello Mydeargreatteacher')
 ```
 ```
 8 * "x"
+答:('xxxxxxxx')
 ```
 ### Unicode轉義字元
 ```
 unicode_a ='\N{LATIN SMALL LETTER A}'
 unicode_a
+答:(a)
 ```
 ```
 unicode_a_with_acute = '\N{LATIN SMALL LETTER A WITH ACUTE}'      
 unicode_a_with_acute
+答:(á)
 ```
 ```
 "\u00E1"
+答:(á)
 ```
 ### 字串處理常用的method(方法)
 ```
 # 使用join()連接字串
 "".join(["Separated", "by", "nothing"])
-
+答:('Separatedbynothing')
 " ".join(["join", "puts", "spaces", "between", "elements"])
-
+答:('join puts spaces between elements')
 "::".join(["Separated", "with", "colons"])
+答:('Separated::with::colons')
 ```
 ```
 # 使用split()切割字串
 x = "You\t\t can have tabs\t\n \t and newlines \n\n mixed in"
 x.split()
+答:(['You', 'can', 'have', 'tabs', 'and', 'newlines', 'mixed', 'in'])
 
 x = "Mississippi"
 x.split("ss")
+答:(['Mi', 'i', 'ippi'])
 
 x = 'a b c d'
 x.split(' ', 1)
+答:(['a', 'b c d'])
 
 ['a', 'b c d']
 x.split(' ', 2)
+答:(['a', 'b', 'c d'])
 
 ['a', 'b', 'c d']
 x.split(' ', 9)
+答:(['a', 'b', 'c', 'd'])
 ```
 ```
 # 使用strip(()、lstrip()、rstrip()去除多餘空白
 
 底下程式執行後各行結果為何?
 x = "  Hello,    World\t\t "
-x.strip()
-x.lstrip()
-x.rstrip()
+x.strip() 'Hello,    World'
+x.lstrip() 'Hello,    World\t\t '
+x.rstrip() '  Hello,    World'
 
 
 底下程式執行後各行結果為何?
 x = "www.python.org"
-x.strip("w")  
-x.strip("gor")       
-x.strip(".gorw")  
+x.strip("w")  '.python.org'
+x.strip("gor")  'www.python.'     
+x.strip(".gorw")  'python'
 ```
 ```
 底下程式執行後各行結果為何?
