--- a/ex/閱讀作業.md
+++ b/ex/閱讀作業.md
@@ -167,7 +167,7 @@ x.split(' ', 9)
 # 使用strip(()、lstrip()、rstrip()去除多餘空白
 
 底下程式執行後各行結果為何?
-x = "  Hello,    World\t\t "
+x = "  Hello,    World\t\t " 答:(  Hello,    World		 )
 x.strip() 'Hello,    World'
 x.lstrip() 'Hello,    World\t\t '
 x.rstrip() '  Hello,    World'
