--- a/ex/閱讀作業.md
+++ b/ex/閱讀作業.md
@@ -216,8 +216,8 @@ while index < len(names):
     print(name)
     index = index + 1
     
-(A)len(names)=2  
-(B)names[1]是 龍 
-(C)程式執行完後,index最後為2
-(D)如果把條件改成 index > len(names),中index最後為2
+(A)len(names)=2 對  
+(B)names[1]是 龍 錯，是聖
+(C)程式執行完後,index最後為2 對
+(D)如果把條件改成 index > len(names),中index最後為2 錯，不會有解答
 ```
