--- a/整理一下/5階段.md
+++ b/整理一下/5階段.md
@@ -1,25 +1,27 @@
-計畫初始階段，目的與方法。
+Planning - 規劃
+
+ 計畫初始階段，目的與方法。
 
   (1) Project Initiation - 計畫初始工作
 
-把組織與企業的價值標示出來/找出來(用最低成本增高最高價值[收入])。
+ 把組織與企業的價值標示出來/找出來(用最低成本增高最高價值[收入])。
 
-做到降低成本 or 增加收入(具體[錢]與非具體[企業形象]) or 降低成本，增高收入。
+ 做到降低成本 or 增加收入(具體[錢]與非具體[企業形象]) or 降低成本，增高收入。
 
   (2) Project Management - 專案管理
 
-專案經理排出行程。
+ 專案經理排出行程。
 
-*System Request
-*System Sponsor - 計畫發起人 -> 由事業單位主管擔任
-*feasibility Analysis - 可行性分析(規劃階段最為重要的部分)
-(1)技術可行性分析
-(2)經濟可行性分析(為公司帶來的價值，維護、運作的花費)
-(3)組織可行性分析(使用者困難 - 技術操作，主觀否定/排斥使用)
+ *System Request
+ *System Sponsor - 計畫發起人 -> 由事業單位主管擔任
+ *feasibility Analysis - 可行性分析(規劃階段最為重要的部分)
+ (1)技術可行性分析
+ (2)經濟可行性分析(為公司帶來的價值，維護、運作的花費)
+ (3)組織可行性分析(使用者困難 - 技術操作，主觀否定/排斥使用)
 
 Analysis - 分析
 
-分析誰要使用此系統。
+ 分析誰要使用此系統。
 
   (1) Analysis Strategy - 分析策略
 
@@ -28,41 +30,41 @@ Analysis - 分析
 
   (3) Analysis Models - 分析模型
 
-Data Model - 資料模型
-Process Model - 流程模型
+ Data Model - 資料模型
+ Process Model - 流程模型
 
   (4) System Proposal - 系統計劃書
 
-用來描述系統需求(收集的資料，Model)
+ 用來描述系統需求(收集的資料，Model)
 
 
-Design - 設計
+ Design - 設計
 
-主要設計邏輯概念(演算法)，不涉及程式寫作(實體設計)。
+ 主要設計邏輯概念(演算法)，不涉及程式寫作(實體設計)。
 
-決定
+ 決定
 
-*硬體
-*軟體
-*網路架構
-*使用者介面考量
-*表格
-*報表
-*特定程式 (Ex：套裝軟體)
-*資料庫
-*檔案
-*etc...
+ *硬體
+ *軟體
+ *網路架構
+ *使用者介面考量
+ *表格
+ *報表
+ *特定程式 (Ex：套裝軟體)
+ *資料庫
+ *檔案
+ *etc...
 
-如何安排
-
-
-Implementation - 程式設計
-
-實體設計、System Construction - 系統程式建構。
+ 如何安排
 
 
-Use & Support - 系統上線與支援
+ Implementation - 程式設計
 
-(1) Installation - 系統安裝、上線
+ 實體設計、System Construction - 系統程式建構。
 
-(2) Support Plan - 支援計畫
+
+ Use & Support - 系統上線與支援
+
+ (1) Installation - 系統安裝、上線
+
+ (2) Support Plan - 支援計畫
