--- a/整理一下/3v5v.md
+++ b/整理一下/3v5v.md
@@ -5,7 +5,7 @@
 ```
 價值化Value
 ```
-大量的不相關信息，對未來趨勢與模式的可預測分析，深度複雜分析（機器學習，人工智慧vs傳統商務智能）
+從大量的非相關訊息中找到有價值的訊息並連結再一起（機器學習，人工智慧vs傳統商務智能）
 ```
 多樣化Variety
 ```
