--- a/聖誕樹.ipynb
+++ b/聖誕樹.ipynb
@@ -3,9 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Untitled0.ipynb",
-      "version": "0.3.2",
+      "name": "Untitled2.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -21,57 +21,33 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/andrew267/cs4hight_4080E020/blob/master/%E8%81%96%E8%AA%95%E6%A8%B9.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/xuan0215/cs4hight_4080E020/blob/master/%E8%81%96%E8%AA%95%E6%A8%B9.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "h8-5DprBZy0U",
+        "id": "4IK_R7bLmNLx",
         "colab_type": "code",
-        "outputId": "ed419883-3aed-4143-cbc4-1b0f639f568d",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 235
-        }
+        "colab": {}
       },
       "source": [
-        "print(\"        5         \")\n",
-        "print(\"       555        \")\n",
-        "print(\"      55555       \")\n",
-        "print(\"     5555555      \")\n",
-        "print(\"    555555555     \")\n",
-        "print(\"   55555555555    \")\n",
-        "print(\"  5555555555555   \")\n",
-        "print(\" 555555555555555  \")\n",
-        "print(\"      55555       \")\n",
-        "print(\"      55555       \")\n",
-        "print(\"      55555       \")\n",
-        "print(\"      55555       \")\n",
-        "print(\"      55555       \")"
+        "print(\"        *         \")\n",
+        "print(\"       ***        \")\n",
+        "print(\"      *****       \")\n",
+        "print(\"     *******      \")\n",
+        "print(\"    *********     \")\n",
+        "print(\"   ***********    \")\n",
+        "print(\"  *************   \")\n",
+        "print(\" ***************  \")\n",
+        "print(\"      *****       \")\n",
+        "print(\"      *****       \")\n",
+        "print(\"      *****       \")\n",
+        "print(\"      *****       \")\n",
+        "print(\"      *****       \")"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "        5         \n",
-            "       555        \n",
-            "      55555       \n",
-            "     5555555      \n",
-            "    555555555     \n",
-            "   55555555555    \n",
-            "  5555555555555   \n",
-            " 555555555555555  \n",
-            "      55555       \n",
-            "      55555       \n",
-            "      55555       \n",
-            "      55555       \n",
-            "      55555       \n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     }
   ]
 }
